# PETER_SIMULATION

./: .gitignore  Dieguito.txt  README.md
Docker_harmonic/: 02_new_docker.txt  compose.yaml  compose_build.bash
Docker_harmonic/docker_simulator/DockerFiles/: Dockerfile
ESCRITURA/: Descripcion.md  Descripcion.txt
OLD/PETER/src/peter_robot/: setup.py
OLD/PETER_V2/: README.txt
RED/: Descripcion.md  Descripcion.txt  README.md  READMERED.md  Red_lidar_anillocompleto.py  VariacionIMUv2.py
Repository/ImplementationRealRobot/camera_servidor/: CMakeLists.txt  cameraPublisher.py  main.cpp
Repository/ImplementationRealRobot/camera_servidor/Codigos Auxiliares/: cameraAdjust.py  camera_3_filtros_estaticos.py
Repository/ImplementationRealRobot/camera_servidor/documentacion/: camera_funcional_last.cpp  camera_memoy_duncional.cpp  camera_server_funcional.cpp  lidar_memoria.cpp
Repository/ImplementationRealRobot/lidar/: CMakeLists.txt  main.cpp
Repository/ImplementationRealRobot/lidar/Codigos Red/: mlp_imu.py  rasterIMU.py  raster_neuro.py  red_final_version2.py  red_final_versionIMU.py
Repository/ImplementationRealRobot/lidar/Codigos auxiliares/: lidar_test.py  serial_datos_transform.py  serial_teleop.py
Repository/ImplementationRealRobot/lidar/Copias de Seguridad/: red_final_version3.py  red_final_version_vsam.py  red_final_version_vsam1.py  red_python.py  red_python_lidar.py  red_python_lidar_cam.py  red_python_lidar_cam_imu_dieguito.py  red_python_lidar_cam_imu_sg.py  red_python_lidar_cam_no_imu.py
Repository/ImplementationRealRobot/lidar/RED_PETER/: mlp_imu.py  red_python_lidar_cam_imu_sg.py
Repository/OLD/PETER/: README.txt
Repository/RED/: README.md  graficador_activaciones.py  red_parcial_v2.py  scan_subscriber.py
Repository/WORKSPACES_ROS/: Descripcion.md
WORKSPACES_ROS/: Descripcion.txt  README_DOCKER
WORKSPACES_ROS/PETER_V2/src/peter_robot/: setup.py
WORKSPACES_ROS/PUTOSAM/install/: local_setup.sh  setup.sh
WORKSPACES_ROS/PUTOSAM/log/: latest_build  latest_list
WORKSPACES_ROS/PUTOSAM/src/peter_robot/: setup.py
WORKSPACES_ROS/ros2_ws/: README
WORKSPACES_ROS/ros2_ws/src/peter_robot/: package.xml  setup.py
ros2_ws/: README.txt
ros2_ws/src/peter_robot/: setup.cfg  setup.py
ros2_ws/src/peter_robot/config/: gz_bridge.yaml  peter_joint_controller.yaml
ros2_ws/src/peter_robot/launch/: gazebo.launch.py  graficas.launch.py  plotjuggler_config.xml
ros2_ws/src/peter_robot/meshes/: CoxisLD_link.STL  CoxisLU_link.STL  CoxisRD_link.STL  CoxisRU_link.STL  FemurLD_link.STL  FemurLU_link.STL  FemurRD_link.STL  FemurRU_link.STL  Head_y_link.STL  Head_z_link.STL  RuedaLD_link.STL  RuedaLU_link.STL  RuedaL_link.STL  RuedaRD_link.STL  RuedaRU_link.STL  TibiaLD_link.STL  TibiaLU_link.STL  TibiaRD_link.STL  TibiaRU_link.STL  base_link.STL  lidar_link.STL
ros2_ws/src/peter_robot/models/: blue.sdf  red.sdf
ros2_ws/src/peter_robot/src/: camera_node.py  live_signals.py  peter_controller.py  plotter.py  raster_graphic_node.py  red_neuronal.py
ros2_ws/src/peter_robot/urdf/: peter.urdf  peter.urdf.xacro
ros2_ws/src/peter_robot/worlds/: depot.sdf  empty.world
ros2_ws/src/peter_robot_c/: CMakeLists.txt  package.xml
ros2_ws/src/peter_robot_c/config/: peter_joint_controller.yaml
ros2_ws/src/peter_robot_c/launch/: display.launch.py  gazebo.launch.py  graficas.launch.py  plotjuggler_config.xml  rviz_configuration.rviz
ros2_ws/src/peter_robot_c/meshes/: CoxisRD_link.STL  FemurLD_link.STL  FemurRU_link.STL  RuedaRD_link.STL  TibiaRD_link.STL  base_link.STL
ros2_ws/src/peter_robot_c/src/: peter_controller.py  red_cpp.cpp  test_move_joints.py
ros2_ws/src/peter_robot_c/urdf/: peter.urdf  peter.urdf.xacro  peter_colors.xacro  peter_control_plugin.xacro
ros2_ws/src/peter_robot_c/worlds/: contextos.world  fabrica.sdf  terrain.world
(+109 files in other folders)
