<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>peter_robot_c</name>
  <version>0.0.0</version>
  <description>Peter Robot</description>
  <maintainer email="samm.car23@gmail.com">sam</maintainer>
  <license>Apache License 2.0</license> <!-- Cambié TODO por la licencia que usaste en setup.py -->

  <!-- Herramienta de construcción -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Dependencias opcionales de mensajes si las usas -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type> <!-- Migrado a cmake -->
  </export>
</package>
